feat: move /form/parse endpoint to /parser with separate service (#177)
* docs: update openapi

* feat: create parser service

* wip: add parser service to api

* wip: remove parser related code from form service
