# backend/src/services/Form/FormAPI.ts
@@ -11,7 +11,6 @@ export class FormAPI {
   public returnRouter() {
     this.getForm();
     this.postForm();
-    this.parseForm();
     return this.router;
   }
 
@@ -27,9 +26,5 @@ export class FormAPI {
   /* POST /forms/{formId} */
   private postForm() {
     this.router.post("/forms", FormController.create);
-  }
-
-  private parseForm() {
-    this.router.post("/forms/parse", FormController.parse);
   }
 }
